[#5893, #6139, #6137] Select2 Right border in RTL, RTL-Enable portal in multiple products alignment issue,Tags Width [New ticket page]

--- a/public/src/page/admin/_product_page.scss
+++ b/public/src/page/admin/_product_page.scss
@@ -53,9 +53,6 @@
 }
 
 .portal-page-form{
-	.controls{
-		width:60%;
-	}
 	.plus{
     	@include border-radius(100%);
 	    background: green;
