--- a/public/src/plugins/_zpluginhack.scss
+++ b/public/src/plugins/_zpluginhack.scss
@@ -19,6 +19,10 @@
 	@include border-radius(3px 3px 0 0);
 }*/
 
+.ui-form li.select2-search-choice{
+	width:auto;
+}
+.tkt-sidebar #TicketProperties li.field .select2-container-multi .select2-choices .select2-search-choice
 .select2-drop{
 	margin-top: -3px;
 }
